<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Book Store</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_order_supplier">Order more</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_supplier_phone">Phone number</string>

    <string name="empty_view_title_text">It\'s a bit empty here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="add_stock">Add stock</string>
    <string name="subtract_stock">Subtract Stock</string>


    <string name="errorName">Book requires a name</string>
    <string name="errorPrice">Book requires valid price</string>
    <string name="errorQuantity">Book requires valid quantity</string>
    <string name="errorSupplier">Book requires valid supplier</string>
    <string name="errorPhone">Book requires valid phone number</string>

    <string name="error_incorrect_name">Please provide a valid name</string>
    <string name="error_incorrect_price">Please provide a valid price</string>
    <string name="error_incorrect_quantity">Please provide a valid quantity</string>
    <string name="error_incorrect_supplier">Please provide a valid supplier</string>
    <string name="error_incorrect_phone">Please provide a valid phone number</string>

    <string name="no_stock">Out of stock. Check later</string>
    <string name="out_of_stock"> Out of stock</string>

</resources>
