<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:orientation="horizontal"
    android:paddingEnd="32dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="32dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            style="@style/mainText"
            android:maxLines="2"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/secondaryText"
                android:layout_marginRight="12dp"
                android:text="@string/hint_price" />

            <TextView
                android:id="@+id/price"
                style="@style/secondaryText"
                android:maxLines="1"
                android:textColor="@color/textColor" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout style="@style/layoutStyle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textStyle"
                android:layout_marginRight="12dp"
                android:text="@string/hint_quantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/textStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/order"
            style="@style/buttonStyle"
            android:focusable="false"
            android:text="@string/order" />

    </LinearLayout>
</LinearLayout>